# AvoidRain

./: .enemies.py.swp  .main.py.swp  .pathFinder.py.swp  .victim.py.swp  Description.txt  README.md  contactInfo.txt  enemies.py  enemiesInfo  main.py  pathFinder.py  poetry lock  pyproject  pyproject.toml  requirements.txt  victim.py
avoidRain/: script.py
